# bge-reranker-v2-m3-api-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_EN.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml
bge_reranker_v2_m3_api_server/: __init__.py  api.py  cli.py  models.py  scripts.py  service.py
examples/: __init__.py  basic_usage.py  curl_examples.md
scripts/: publish-docker-utf8.bat
tests/: __init__.py  test_api.py  test_models.py  test_service.py
